@@ -1,3 +1,11 @@
+2011-01-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc.h,
+	  src/z80/ralloc.c,
+	  src/z80/ralloc2.cc:
+	  Handle A in new register allocator.
+
 2011-01-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80ralloc2.cc:
